View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026650 | Open CASCADE | OCCT:Coding | public | 2015-09-07 09:30 | 2015-10-23 20:49 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.5.4 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026650: Coding rules - fix misprint in NCollection_Vec3::operator/() | ||||
Description | The following misprint should be fixed:NCollection_Vec3 aResult (this); | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26650 has been created by kgv. SHA-1: 19eedf5ea6516b7d562caf6e341e17a435dfda3d Detailed log of new commits: Author: kgv Date: Mon Sep 7 09:31:35 2015 +0300 0026650: Coding rules - fix misprint in NCollection_Vec3::operator/() |
|
Please check compilation and integrate, regression testing is not needed. |
|
Branch CR26650 has been updated forcibly by mkv. SHA-1: 4d41ab9c2e76bc1dffdc5be2ad1234d0852745b6 |
|
Dear BugMaster, Branch CR26650 was rebased on current master of occt git-repository. SHA-1: 4d41ab9c2e76bc1dffdc5be2ad1234d0852745b6 |
|
Dear BugMaster, Branch CR26650 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 4d41ab9c2e76bc1dffdc5be2ad1234d0852745b6 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) |
|
Branch CR26650 has been deleted by kgv. SHA-1: 4d41ab9c2e76bc1dffdc5be2ad1234d0852745b6 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-09-07 09:30 | kgv | New Issue | |
2015-09-07 09:30 | kgv | Assigned To | => kgv |
2015-09-07 09:32 | git | Note Added: 0045118 | |
2015-09-07 09:34 | kgv | Note Added: 0045119 | |
2015-09-07 09:34 | kgv | Assigned To | kgv => bugmaster |
2015-09-07 09:34 | kgv | Status | new => resolved |
2015-09-07 09:34 | kgv | Product Version | 6.9.0 => 6.5.4 |
2015-09-07 09:34 | kgv | Status | resolved => reviewed |
2015-09-07 09:37 | kgv | Relationship added | related to 0024307 |
2015-09-07 15:19 |
|
Assigned To | bugmaster => mkv |
2015-09-07 15:59 | git | Note Added: 0045147 | |
2015-09-07 19:07 |
|
Note Added: 0045183 | |
2015-09-07 19:07 |
|
Note Added: 0045184 | |
2015-09-07 19:07 |
|
Assigned To | mkv => bugmaster |
2015-09-07 19:07 |
|
Status | reviewed => tested |
2015-09-07 19:08 |
|
Test case number | => Not needed |
2015-09-11 14:09 | bugmaster | Changeset attached | => occt master cc5f85f8 |
2015-09-11 14:09 | bugmaster | Status | tested => verified |
2015-09-11 14:09 | bugmaster | Resolution | open => fixed |
2015-09-11 18:12 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:55 |
|
Status | verified => closed |
2015-10-16 16:37 | git | Note Added: 0047016 | |
2015-10-23 20:49 |
|
Fixed in Version | => 6.9.1 |