0026650: Coding rules - fix misprint in NCollection_Vec3::operator/()